sample/msvc/error/c2120.cpp
// C2120.cpp
int main() {
   void int i;   // C2120
   int j;   // OK
}
